src/test/deca/context/valid/created/objet/cast_ob.deca
// Description :
//      test de verification du cast de classe 
// Resultats :
//      ok

class B{
     int x;

}


{

    Object o = new Object();
    B b = new B();
    b = (B)(o);
}